--- a/app/templates/email/trialexpiring.html
+++ b/app/templates/email/trialexpiring.html
@@ -11,17 +11,17 @@
 					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
 						<tbody>
 							<tr>
-								<td valign="top" bgcolor="#f1f1f1" colspan="3"  width="100%">
-									<table width="100%">
+								<td valign="middle" bgcolor="#f1f1f1" colspan="3"  width="100%">
+									<table width="100%" valign="middle">
 										<tr>
-											<td align="left" width="50%">
+											<td align="left" width="50%" valign="middle">
 												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
-													<img border="0" align="left" style="margin:0" alt="ChurchStack" src="cid:cs_head_logo">
+													<img border="0" style="vertical-align:middle;" align="middle" style="border:0" alt="ChurchStack" src="cid:cs_head_logo">
 												</a>
 											</td>
-											<td align="right" width="50%">
+											<td align="right" width="50%" valign="middle">
 												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
-													<img border="0" align="right" style="margin:0" alt="ChurchStack" src="cid:cs_site_text_logo">
+													<img border="0" style="vertical-align:middle;" align="middle" style="border:0" alt="ChurchStack" src="cid:cs_site_text_logo">
 												</a>
 											</td>
 										</tr>
