--- a/app/templates/email/welcome.html
+++ b/app/templates/email/welcome.html
@@ -7,21 +7,21 @@
 	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
         <tbody>
 			<tr>
-				<td valign="top" align="center" style="padding:20px 0 20px 0">
+				<td valign="top" align="center" style="padding:2px;">
 					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
 						<tbody>
 							<tr>
-								<td valign="top" bgcolor="#f1f1f1" colspan="3"  width="100%">
-									<table width="100%">
+								<td valign="middle" bgcolor="#f1f1f1" colspan="3"  width="100%">
+									<table width="100%" valign="middle">
 										<tr>
-											<td align="left" width="50%">
+											<td align="left" width="50%" valign="middle">
 												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
-													<img border="0" align="left" style="margin:0" alt="ChurchStack" src="cid:cs_head_logo">
+													<img border="0" style="vertical-align:middle;" align="middle" style="border:0" alt="ChurchStack" src="cid:cs_head_logo">
 												</a>
 											</td>
-											<td align="right" width="50%">
+											<td align="right" width="50%" valign="middle">
 												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
-													<img border="0" align="right" style="margin:0" alt="ChurchStack" src="cid:cs_site_text_logo">
+													<img border="0" style="vertical-align:middle;" align="middle" style="border:0" alt="ChurchStack" src="cid:cs_site_text_logo">
 												</a>
 											</td>
 										</tr>
@@ -73,7 +73,7 @@
 							</tr>
 							<tr>
 								<td bgcolor="#c8c8c8" align="center" style="text-align:center" colspan="3">
-									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
+									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:5px;padding-bottom:5px">
 										Thank you,
 										<br>
 										<b>{{PRODUCT_NAME}}</b>
