Sending event reminder mail completed.

--- a/app/templates/email/eventreminder.html
+++ b/app/templates/email/eventreminder.html
@@ -27,15 +27,15 @@
 											</tr>
 											<tr>
 												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;width5%;vertical-align:top; text-align:left;" nowrap>Description</td>
-												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;"><b>{{EVENT_DESC}}</b></td>
+												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;"><b>&nbsp;&nbsp;{{EVENT_DESC}}</b></td>
 											</tr>
 											<tr>
 												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;width5%;vertical-align:top; text-align:left;" nowrap>Date & Time</td>
-												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;" nowrap><b>{{EVENT_DATE_AND_TIME}}</b></td>
+												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;" nowrap><b>&nbsp;&nbsp;{{EVENT_DATE_AND_TIME}}</b></td>
 											</tr>
 											<tr>
 												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;width5%;vertical-align:top; text-align:left;" nowrap>Place</td>
-												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;" nowrap><b>{{EVENT_PLACE}}</b></td>
+												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;vertical-align:top; text-align:left;" nowrap><b>&nbsp;&nbsp;{{EVENT_PLACE}}</b></td>
 											</tr>
 											<tr>
 												<td style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;width5%;vertical-align:top; text-align:left;" nowrap>Organizers</td>
@@ -72,11 +72,11 @@
 	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left" width="1" valign="middle">
 		<span style="font-family:Courier New,monospace; font-size:25px;color:#222">&middot;</span>
 	</td>
-	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left">nesan</td>
+	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left">{{EVENT_ORGANIZER}}</td>
 </tr> ORGANIZER_ROW_END-->
 <!--ATTENDEE_ROW_START <tr>
 	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left" width="1" valign="middle">
 		<span style="font-family:Courier New,monospace; font-size:25px;color:#222">&middot;</span>
 	</td>
-	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left">nesan</td>
+	<td style="font-size:13px;font-family:Arial,sans-serif;line-height:10px;color:#555555;margin:0;padding:0px;" align="left">{{EVENT_ATTENDEE}}</td>
 </tr> ATTENDEE_ROW_END-->
