To license date updates, for 30 days, exact one month added to the validity. So that date will not change.

--- a/app/templates/email/paidthankyou.html
+++ b/app/templates/email/paidthankyou.html
@@ -45,7 +45,7 @@
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
 										<b>Your new validity : </b>Till {{NEW_VALIDITY}}<BR/>
 										<b>Amount Paid : </b>{{AMOUNT_PAID}}<BR/>
-										<b>Auto-Debit : </b>{{AUTO_DEBIT_STATUS}}<BR/>
+										<!-- b>Auto-Debit : </b>{{AUTO_DEBIT_STATUS}}<BR/ -->
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
 										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
