URL corrections and text corrections.

--- a/app/templates/email/invoice.html
+++ b/app/templates/email/invoice.html
@@ -49,7 +49,7 @@
 																	<table style="border-collapse: collapse; border: 0; padding: 5px;" align="left" valign="top">
 																		<tbody>
 																			<tr>
-																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap><b>Customer Name</b></td>
+																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap><b>Billing Name</b></td>
 																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>:<td>
 																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>{{CUSTOMER_NAME}}</td>
 																			</tr>
@@ -59,7 +59,7 @@
 																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;vertical-align:top;">{{BILLING_ADDRESS}}</td>
 																			</tr>
 																			<tr>
-																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap><b>Customer Email</b></td>
+																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap><b>Email</b></td>
 																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>:<td>
 																				<td style="border-collapse: collapse; border: 0; padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>{{CUSTOMER_EMAIL}}</td>
 																			</tr>
