--- a/app/templates/email/licenseexpiring.html
+++ b/app/templates/email/licenseexpiring.html
@@ -54,10 +54,11 @@
 										<ul>
 											<li>Go to <a href="{{CS_LOGIN_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PRODUCT_NAME}} account login</a> page</li>
 											<li>Login to your account with your credentials</li>
-											<li>Click the button "Renew Subscription" shown at the top right corner</li>
-											<li>You will be shown the available plans that will suit your church's profile</li>
-											<li>Choose the plan and proceed to make the payment</li>
-											<li>Keep enjoying {{PRODUCT_NAME}}!</li>
+											<li>At the top right corner where your email is shown, click on it to display the submenus. Now, click the submenu "My Account".</li>
+											<li>In "My Account" page, from the left pane, click "My Billing".</li>
+											<li>You will be shown your current plan and other available plans that might suit your church's profile</li>
+											<li>Choose a plan and proceed to make the payment</li>
+											<li>Once the payment is received by us, your account's validity will be extended as per the plan you purchased.</li>
 										</ul>
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
