--- a/app/templates/email/referralprogram.html
+++ b/app/templates/email/referralprogram.html
@@ -58,7 +58,7 @@
 									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
 										Thank you,
 										<br>
-										<b>{{PRODUCT_NAME}} Team</b>
+										<b>{{PRODUCT_NAME}}</b>
 									</p>
 								</td>
 							</tr>
