--- a/app/templates/email/welcome.html
+++ b/app/templates/email/welcome.html
@@ -48,8 +48,8 @@
 									</h1>
 									<h2 style="font-size:17px;font-weight:bold;font-family:Arial,sans-serif;line-height:23px;margin:0 0 10px 0;color:#e34500">Welcome to {{PRODUCT_NAME}}, an efficient and a fastest growing Online Church Management Software. Your account has been created on {{PRODUCT_NAME}} and is now ready to use.</h2>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-									<b>Your Church Details:</b><BR/>
-									{{CHURCH_NAME}},<BR/>{{CHURCH_ADDRESS}}
+									<b>Your Church Name:</b><BR/>
+									{{CHURCH_NAME}}
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
 										You can login to your {{PRODUCT_NAME}} account by clicking the "Signin" button on the top of the <a href="{{PRODUCT_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PRODUCT_WEBSITE}}</a> site and use the following details:
