--- a/app/templates/email/forgotpassword.html
+++ b/app/templates/email/forgotpassword.html
@@ -49,7 +49,7 @@
 										<a href="{{PASSWORD_RESET_LINK}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PASSWORD_RESET_LINK}}</a>
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-									<b>Note: </b> The above url is valid only for 3 days. After 3 days it will be deactivated for security reasons.
+									<b>Note: </b> The above url will be deactivated after 3 days for security reasons.
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
 										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
@@ -67,7 +67,7 @@
 									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
 										Thank you,
 										<br>
-										<b>{{PRODUCT_NAME}} Team</b>
+										<b>{{PRODUCT_NAME}}</b>
 									</p>
 								</td>
 							</tr>
