Fixed issue in "Change Email" option.

--- a/app/templates/email/welcome.html
+++ b/app/templates/email/welcome.html
@@ -52,7 +52,7 @@
 									{{CHURCH_NAME}}
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-										You can login to your {{PRODUCT_NAME}} account by clicking the "Signin" button on the top of the <a href="{{PRODUCT_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PRODUCT_WEBSITE}}</a> site and use the following details:
+										You can login to your {{PRODUCT_NAME}} account by going to the following URL and use the credentials below:
 										<br>
 										<br>
 										<b>Login URL</b>: <a href="{{CS_LOGIN_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{CS_LOGIN_WEBSITE}}</a>
