--- a/app/templates/email/invoice.html
+++ b/app/templates/email/invoice.html
@@ -118,6 +118,11 @@
 															</tr>
 															<tr>
 																<td colspan="2">&nbsp;</td>
+																<td colspan="2" style="border: 1px solid #A4A4A4; padding: 5px; text-align: left; font-size:13px;font-family:Arial,sans-serif;color:#555555;">Service Tax @12.36%</td>
+																<td style="border: 1px solid #A4A4A4; padding: 5px; text-align: left; font-size:13px;font-family:Arial,sans-serif;color:#555555;"><div id="subtotal">{{TAX_AMOUNT}}</div></td>
+															</tr>
+															<tr>
+																<td colspan="2">&nbsp;</td>
 																<td colspan="2" style="border: 1px solid #A4A4A4; padding: 5px; text-align: left; background: #eee; font-weight:bold; font-size:13px;font-family:Arial,sans-serif;color:#555555;">Net Total</td>
 																<td style="border: 1px solid #A4A4A4; padding: 5px; text-align: left; font-weight:bold; background: #eee; font-size:13px;font-family:Arial,sans-serif;color:#555555;">{{NET_TOTAL}}</td>
 															</tr>
