--- a/app/templates/email/invoice.html
+++ b/app/templates/email/invoice.html
@@ -172,9 +172,9 @@
 <body>
 </html>
 <!--ITEM_ROW_START <tr style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">
-	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">{{ITEM_NAME}}</td>
-	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">{{ITEM_DESC}}</td>
-	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">{{ITEM_UNIT_PRICE}}</td>
-	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">{{ITEM_QUANTITY}}</td>
-	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle;">{{ITEM_TOTAL}}</td>
+	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle; font-size:13px;font-family:Arial,sans-serif;color:#555555;"">{{ITEM_NAME}}</td>
+	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle; font-size:13px;font-family:Arial,sans-serif;color:#555555;"">{{ITEM_DESC}}</td>
+	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle; font-size:13px;font-family:Arial,sans-serif;color:#555555;"">{{ITEM_UNIT_PRICE}}</td>
+	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle; font-size:13px;font-family:Arial,sans-serif;color:#555555;"">{{ITEM_QUANTITY}}</td>
+	<td style="border: 1px solid #A4A4A4; padding: 5px; vertical-align: middle; font-size:13px;font-family:Arial,sans-serif;color:#555555;"">{{ITEM_TOTAL}}</td>
 </tr> ITEM_ROW_END-->
