--- a/app/templates/email/invoice.html
+++ b/app/templates/email/invoice.html
@@ -85,7 +85,7 @@
 																			</tr>
 																			<tr style="border: 1px solid #A4A4A4; padding: 5px;">
 																				<td style="text-align: left; background: #eee;  padding: 5px; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Amount Paid</td>
-																				<td style="text-align: left; padding: 5px; border: 1px solid #A4A4A4; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>USD {{AMOUNT_PAID}}</td>
+																				<td style="text-align: left; padding: 5px; border: 1px solid #A4A4A4; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>{{CURRENCY_CODE}} {{AMOUNT_PAID}}</td>
 																			</tr>
 																		</tbody>
 																	</table>
@@ -101,9 +101,9 @@
 															<tr style="border: 1px solid #A4A4A4; padding: 5px;">
 																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:20%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Item</th>
 																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:40%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Description</th>
-																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:15%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Unit Price (USD)</th>
+																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:15%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Unit Price ({{CURRENCY_CODE}})</th>
 																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:10%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Quantity</th>
-																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:15%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Amount (USD)</th>
+																<th style="border: 1px solid #A4A4A4; padding: 5px; background: #eee; width:15%; font-size:13px;font-family:Arial,sans-serif;color:#555555;" nowrap>Amount ({{CURRENCY_CODE}})</th>
 															</tr>
 															<!--ALL_ITEMS_ROWS-->
 															<tr>
