--- a/app/templates/email/trialexpired.html
+++ b/app/templates/email/trialexpired.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<title>{{PRODUCT_NAME}} - Your trial period has expired</title>
+	<!-- title>{{PRODUCT_NAME}} - Your trial period has expired</title -->
 </head>
 <body>
 	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
