--- a/app/templates/email/welcome_new.html
+++ b/app/templates/email/welcome_new.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<title>Welcome to {{PRODUCT_NAME}}</title>
+	<!-- title>Welcome to {{PRODUCT_NAME}}</title -->
 </head>
 <body>
 	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
