--- a/app/templates/email/licenseexpiring.html
+++ b/app/templates/email/licenseexpiring.html
@@ -54,10 +54,10 @@
 										<ul>
 											<li>Go to <a href="{{CS_LOGIN_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PRODUCT_NAME}} account login</a> page</li>
 											<li>Login to your account with your credentials</li>
-											<li>At the top right corner where your email is shown, click on it to display the submenus. Now, click the submenu "My Account".</li>
-											<li>In "My Account" page, from the left pane, click "My Billing".</li>
-											<li>You will be shown your current plan and other available plans that might suit your church's profile</li>
-											<li>Choose a plan and proceed to make the payment</li>
+											<li>Click on the main menu "My Account".</li>
+											<li>In "My Account" page, from the left pane, click "My Billing & Plan".</li>
+											<li>You will be shown your current plan and other available plans that might suit your church's size</li>
+											<li>Choose a plan and now you will be shown the payment options. Proceed to make the payment by any payment method convenient to you.</li>
 											<li>Once the payment is received by us, your account's validity will be extended as per the plan you purchased.</li>
 										</ul>
 									</p>
